--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">CM</string>
+    <string name="app_name">LAB_MAPS</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
